# serializer version: 1
# name: test_fan_state[Air Purifier 131s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'air-purifier',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'LV-PUR131S',
      'model_id': None,
      'name': 'Air Purifier 131s',
      'name_by_user': None,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_fan_state[Air Purifier 131s][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
          'auto',
          'sleep',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'fan',
      'entity_category': None,
      'entity_id': 'fan.air_purifier_131s',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': None,
      'platform': 'vesync',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': <FanEntityFeature: 57>,
      'translation_key': 'vesync',
      'unique_id': 'air-purifier',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_fan_state[Air Purifier 131s][fan.air_purifier_131s]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'active_time': 0,
      'display_status': 'on',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air Purifier 131s',
      'mode': 'sleep',
      <FanEntityStateAttribute.PERCENTAGE: 'percentage'>: None,
      <FanEntityStateAttribute.PERCENTAGE_STEP: 'percentage_step'>: 33.333333333333336,
      <FanEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'sleep',
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'auto',
        'sleep',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature: 57>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.air_purifier_131s',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_fan_state[Air Purifier 200s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'asd_sdfKIHG7IJHGwJGJ7GJ_ag5h3G55',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'Core200S',
      'model_id': None,
      'name': 'Air Purifier 200s',
      'name_by_user': None,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_fan_state[Air Purifier 200s][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
          'sleep',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'fan',
      'entity_category': None,
      'entity_id': 'fan.air_purifier_200s',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': None,
      'platform': 'vesync',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': <FanEntityFeature: 57>,
      'translation_key': 'vesync',
      'unique_id': 'asd_sdfKIHG7IJHGwJGJ7GJ_ag5h3G55',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_fan_state[Air Purifier 200s][fan.air_purifier_200s]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'active_time': None,
      'child_lock': False,
      'display_status': 'on',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air Purifier 200s',
      'mode': 'manual',
      'night_light': 'off',
      <FanEntityStateAttribute.PERCENTAGE: 'percentage'>: 33,
      <FanEntityStateAttribute.PERCENTAGE_STEP: 'percentage_step'>: 33.333333333333336,
      <FanEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'sleep',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature: 57>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.air_purifier_200s',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_fan_state[Air Purifier 400s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          '400s-purifier',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'LAP-C401S-WJP',
      'model_id': None,
      'name': 'Air Purifier 400s',
      'name_by_user': None,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_fan_state[Air Purifier 400s][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
          'auto',
          'sleep',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'fan',
      'entity_category': None,
      'entity_id': 'fan.air_purifier_400s',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': None,
      'platform': 'vesync',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': <FanEntityFeature: 57>,
      'translation_key': 'vesync',
      'unique_id': '400s-purifier',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_fan_state[Air Purifier 400s][fan.air_purifier_400s]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'active_time': None,
      'child_lock': False,
      'display_status': 'on',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air Purifier 400s',
      'mode': 'manual',
      'night_light': 'off',
      <FanEntityStateAttribute.PERCENTAGE: 'percentage'>: 25,
      <FanEntityStateAttribute.PERCENTAGE_STEP: 'percentage_step'>: 25.0,
      <FanEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'auto',
        'sleep',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature: 57>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.air_purifier_400s',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_fan_state[Air Purifier 600s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          '600s-purifier',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'LAP-C601S-WUS',
      'model_id': None,
      'name': 'Air Purifier 600s',
      'name_by_user': None,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_fan_state[Air Purifier 600s][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
          'auto',
          'sleep',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'fan',
      'entity_category': None,
      'entity_id': 'fan.air_purifier_600s',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': None,
      'platform': 'vesync',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': <FanEntityFeature: 57>,
      'translation_key': 'vesync',
      'unique_id': '600s-purifier',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_fan_state[Air Purifier 600s][fan.air_purifier_600s]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'active_time': None,
      'child_lock': False,
      'display_status': 'on',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air Purifier 600s',
      'mode': 'manual',
      'night_light': 'off',
      <FanEntityStateAttribute.PERCENTAGE: 'percentage'>: 25,
      <FanEntityStateAttribute.PERCENTAGE_STEP: 'percentage_step'>: 25.0,
      <FanEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'auto',
        'sleep',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature: 57>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.air_purifier_600s',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_fan_state[CS158-AF Air Fryer Cooking][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'CS158Cooking',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'CS158-AF',
      'model_id': None,
      'name': 'CS158-AF Air Fryer Cooking',
      'name_by_user': None,
      'serial_number': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_fan_state[CS158-AF Air Fryer Cooking][entities]
  list([
  ])
# ---
# name: test_fan_state[CS158-AF Air Fryer Standby][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'CS158Standby',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'CS158-AF',
      'model_id': None,
      'name': 'CS158-AF Air Fryer Standby',
      'name_by_user': None,
      'serial_number': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_fan_state[CS158-AF Air Fryer Standby][entities]
  list([
  ])
# ---
# name: test_fan_state[Dimmable Light][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'dimmable-bulb',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'ESL100',
      'model_id': None,
      'name': 'Dimmable Light',
      'name_by_user': None,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_fan_state[Dimmable Light][entities]
  list([
  ])
# ---
# name: test_fan_state[Dimmer Switch][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'dimmable-switch',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'ESWD16',
      'model_id': None,
      'name': 'Dimmer Switch',
      'name_by_user': None,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_fan_state[Dimmer Switch][entities]
  list([
  ])
# ---
# name: test_fan_state[Humidifier 200s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          '200s-humidifier4321',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'Classic200S',
      'model_id': None,
      'name': 'Humidifier 200s',
      'name_by_user': None,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_fan_state[Humidifier 200s][entities]
  list([
  ])
# ---
# name: test_fan_state[Humidifier 6000s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          '6000s',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'LEH-S601S-WUS',
      'model_id': None,
      'name': 'Humidifier 6000s',
      'name_by_user': None,
      'serial_number': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_fan_state[Humidifier 6000s][entities]
  list([
  ])
# ---
# name: test_fan_state[Humidifier 600S][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          '600s-humidifier',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'LUH-A602S-WUS',
      'model_id': None,
      'name': 'Humidifier 600S',
      'name_by_user': None,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_fan_state[Humidifier 600S][entities]
  list([
  ])
# ---
# name: test_fan_state[Outlet][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'outlet',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'wifi-switch-1.3',
      'model_id': None,
      'name': 'Outlet',
      'name_by_user': None,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_fan_state[Outlet][entities]
  list([
  ])
# ---
# name: test_fan_state[SmartTowerFan][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'smarttowerfan',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'LTF-F422S-KEU',
      'model_id': None,
      'name': 'SmartTowerFan',
      'name_by_user': None,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_fan_state[SmartTowerFan][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
          'auto',
          'normal',
          'sleep',
          'turbo',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'fan',
      'entity_category': None,
      'entity_id': 'fan.smarttowerfan',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': None,
      'platform': 'vesync',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': <FanEntityFeature: 59>,
      'translation_key': 'vesync',
      'unique_id': 'smarttowerfan',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_fan_state[SmartTowerFan][fan.smarttowerfan]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'active_time': None,
      'display_status': 'off',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'SmartTowerFan',
      'mode': <FanModes.NORMAL: 'normal'>,
      <FanEntityStateAttribute.OSCILLATING: 'oscillating'>: True,
      <FanEntityStateAttribute.PERCENTAGE: 'percentage'>: 0,
      <FanEntityStateAttribute.PERCENTAGE_STEP: 'percentage_step'>: 8.333333333333334,
      <FanEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'normal',
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'auto',
        'normal',
        'sleep',
        'turbo',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature: 59>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.smarttowerfan',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_fan_state[Temperature Light][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'tunable-bulb',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'ESL100CW',
      'model_id': None,
      'name': 'Temperature Light',
      'name_by_user': None,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_fan_state[Temperature Light][entities]
  list([
  ])
# ---
# name: test_fan_state[Wall Switch][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'switch',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'ESWL01',
      'model_id': None,
      'name': 'Wall Switch',
      'name_by_user': None,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_fan_state[Wall Switch][entities]
  list([
  ])
# ---
# name: test_fan_state[CoreBreeze 432S][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'corebreeze432s',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'LPF-R432S-AEU',
      'model_id': None,
      'name': 'CoreBreeze 432S',
      'name_by_user': None,
      'serial_number': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_fan_state[CoreBreeze 432S][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
          'normal',
          'sleep',
          'turbo',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'fan',
      'entity_category': None,
      'entity_id': 'fan.corebreeze_432s',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': None,
      'platform': 'vesync',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': <FanEntityFeature: 59>,
      'translation_key': 'vesync',
      'unique_id': 'corebreeze432s',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_fan_state[CoreBreeze 432S][fan.corebreeze_432s]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'active_time': None,
      'child_lock': False,
      'display_status': 'off',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'CoreBreeze 432S',
      'mode': <FanModes.NORMAL: 'normal'>,
      <FanEntityStateAttribute.OSCILLATING: 'oscillating'>: True,
      <FanEntityStateAttribute.PERCENTAGE: 'percentage'>: 8,
      <FanEntityStateAttribute.PERCENTAGE_STEP: 'percentage_step'>: 8.333333333333334,
      <FanEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'normal',
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'normal',
        'sleep',
        'turbo',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature: 59>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.corebreeze_432s',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
